--- a/StudentManagerWPF/StudentManagerWPF/StudentManagerWPF.csproj
+++ b/StudentManagerWPF/StudentManagerWPF/StudentManagerWPF.csproj
@@ -131,6 +131,12 @@
   <ItemGroup>
     <Resource Include="Assets\ensa-safi-.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\mini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\shut.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
