--- a/StudentManagerWPF/StudentManagerWPF/StudentManagerWPF.csproj
+++ b/StudentManagerWPF/StudentManagerWPF/StudentManagerWPF.csproj
@@ -149,6 +149,12 @@
     <Resource Include="Assets\mini.png" />
     <Resource Include="Assets\shut.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\student.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\addStudent.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
